--- a/src/styles/pagination.scss
+++ b/src/styles/pagination.scss
@@ -7,6 +7,11 @@
     margin: 0px;
     border: 0;
   }
+  .paginate-btn.active{
+    background-color: #1f6feb;
+    color: #fff;
+    border-radius: 4px;
+  }
   .paginate-btn:hover{
     background-color: #1f6feb;
     color: #fff;
