--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,7 +1,8 @@
 header{
-    padding: 20px 30px;
-    background: #fff;
+    padding: 16px 30px;
+    background: #414AC2;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    color: #fff;
   }
