--- a/src/styles/pagination.scss
+++ b/src/styles/pagination.scss
@@ -8,12 +8,12 @@
     border: 0;
   }
   .paginate-btn.active{
-    background-color: #1f6feb;
+    background-color: #411AC2;
     color: #fff;
     border-radius: 4px;
   }
   .paginate-btn:hover{
-    background-color: #1f6feb;
+    background-color: #411AC2;
     color: #fff;
     border-radius: 4px;
   }
