--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,11 +1,11 @@
-@import url("https://fonts.googleapis.com/css?family=Lato&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Roboto&display=swap");
 body {
-  background-color: #eee;
+  background-color: #E5E5E5;
   font-size: 14px;
-  color: #4c4c4c;
+  color: #000000;
   margin: 0;
   padding: 0;
   width: 100%;
   height: 100%;
-  font-family: "Lato", Helvetica, Arial, sans-serif;
+  font-family: "Roboto", Helvetica, Arial, sans-serif;
 }
