--- a/src/styles/table.scss
+++ b/src/styles/table.scss
@@ -5,17 +5,17 @@ article {
   margin-left: auto;
   max-width: 1170px;
 }
-
+section{
+  min-height: 600px;
+}
 .table-container {
   display: inline-grid;
   grid-auto-columns: auto;
   grid-auto-rows: auto;
   width: 100%;
-  // grid-template-columns: 31% 31% 31%;
-  grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: 200px;
-  column-gap: 10px;
-  row-gap: 15px;
+  grid-template-columns: repeat(4, 1fr);
+  column-gap: 15px;
+  row-gap: 10px;
 }
 .container-header {
   display: flex;
