--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -8,6 +8,6 @@
     cursor: pointer;  
   }
   .add-new:hover{
-    background: #4149C2;
-    color: #fff;
+    background: #DADDFB;
+    color: #414AC2;
   }
