--- a/src/styles/pagination.scss
+++ b/src/styles/pagination.scss
@@ -6,6 +6,7 @@
     padding: 6px 12px;
     margin: 0px;
     border: 0;
+    background-color: transparent;
   }
   .paginate-btn.active{
     background-color: #411AC2;
